--- a/roles/server/templates/base-config.xml
+++ b/roles/server/templates/base-config.xml
@@ -22,7 +22,13 @@
       {% endif %}
       <passwordFile path="{{ GOCD_PASSWDFILE_PATH }}" />
       <admins>
-        <user>{{ GOCD_DEFAULT_ADMIN }}</user>
+        {% if GOCD_EXISTING_ADMIN %}
+
+          {{ GOCD_EXISTING_ADMIN }}
+        {% else %}
+          <user>{{ GOCD_DEFAULT_ADMIN }}</user>
+        {% endif %}
+
       </admins>
    </security>
    {% endif %}
